product cruds with extra fields and search
