# app/models/product.rb
@@ -1,0 +1,9 @@
+# frozen_string_literal: true
+
+class Product < ApplicationRecord
+  ransacker :extra_fields do |parent|
+    Arel::Nodes::InfixOperation.new('||',
+      parent.table[:extra_fields], Arel::Nodes.build_quoted(' ')
+    )
+  end
+end
